--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="styles.css" />
+    <script src="index.js" type="module"></script>
     <title>Ejercicio</title>
   </head>
   <body>
     <main class="container">
       <input type="text" class="input" value="" />
       <button class="button">Create</button>
-      <div class="info"></div>
+      <div class="container__info"></div>
     </main>
   </body>
 </html>
