Added the 4 buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
   </head>
   <body>
     <main class="container">
-      <input type="text" class="input" value="" />
-      <button class="button">Create</button>
-      <div class="container__info"></div>
+      <div class="div-container">
+        <input type="text" class="input" value="" />
+        <button class="button">Create Img</button>
+
+        <input type="text" class="input" value="" />
+        <button class="button">Create Button</button>
+
+        <input type="text" class="input" value="" />
+        <button class="button">Create p</button>
+
+        <input type="text" class="input" value="" />
+        <button class="button">Create input</button>
+      </div>
     </main>
   </body>
 </html>
