Added all the buttons on component file

--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
   </head>
   <body>
     <main class="container">
-      <div class="div-container">
-        <input type="text" class="input" value="" />
-        <button class="button">Create Img</button>
+      <div class="container-image">
+        <input type="text" class="input-image" value="" />
+        <button class="button">Img</button>
+      </div>
 
-        <input type="text" class="input" value="" />
-        <button class="button">Create Button</button>
+      <div class="container-button">
+        <input type="text" class="input-button" value="" />
+        <button class="button">Button</button>
+      </div>
 
-        <input type="text" class="input" value="" />
-        <button class="button">Create p</button>
+      <div class="container-p">
+        <input type="text" class="input-p" value="" />
+        <button class="button">p</button>
+      </div>
 
-        <input type="text" class="input" value="" />
-        <button class="button">Create input</button>
+      <div class="container-input">
+        <input type="text" class="input-input" value="" />
+        <button class="button">Input</button>
       </div>
     </main>
   </body>
